@@ -1,0 +1,14 @@
+require "rubygems"
+require "rake"
+
+require "choctop"
+
+ChocTop::Configuration.new do |s|
+  s.name = '<%= name %>'
+
+  s.add_root :position => [290, 200], :exclude => %w[build .bundle .git]
+  # s.add_link 'http://github.com/<%= github_user %>/<%= name %>', 'GitHub', :position => [520, 200]
+
+  # s.background_file = 'Support/dmg/dmg_background.png'
+  # s.volume_icon     = 'Support/dmg/dmg_volume_icon.icns'
+end
