@@ -1,3 +1,4 @@
+* install_choctop: --tmbundle/--textmate flag
 * Don't mention CocoaApp in usage; choctop can do more now
 
 == 0.13.1 2010-07-07
